fix: fixed spacing

--- a/nft-preview-card-component/styles.css
+++ b/nft-preview-card-component/styles.css
@@ -100,8 +100,14 @@ body {
     margin: 4rem 1.5rem;
     padding: 1.5rem;
     overflow: hidden;
-    max-width: 327px;
+    max-width: 350px;
     gap: var(--card-spacing)
+}
+
+@media (min-width: 375px){
+    .card {
+
+    }
 }
 
 .card__image {
@@ -159,7 +165,7 @@ body {
 .price-coin {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 4px;
     align-items: center;
     color: var(--clr-secondary-400);
     font-size: 1rem;
@@ -177,7 +183,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 10px;
+    gap: 0.4375rem;
+    font-size: 1rem;
 }
 
 .line {
@@ -214,6 +221,7 @@ body {
 
 .seller-text {
     font-size: 1rem;
+
 
 }
 
